--- a/foodorderapp/src/App.css
+++ b/foodorderapp/src/App.css
@@ -5,4 +5,9 @@ font-family: 'Oswald', sans-serif;
 font-family: 'PT Sans', sans-serif;
 font-family: 'Roboto', sans-serif;
 font-family: 'Roboto Condensed', sans-serif;
+padding: 0;
+margin: 0;
+}
+h2{
+  font-weight: bold;
 }
