--- a/foodorderapp/src/Component/Navbar.css
+++ b/foodorderapp/src/Component/Navbar.css
@@ -6,7 +6,7 @@
   font-size: 18px;
   color: white;
   border-bottom: 1px solid white;
-  position: fixed; /* Add this line to fix the navbar at the top */
+ /* Add this line to fix the navbar at the top */
   top: 0; /* Add this line to position it at the top */
   left: 0; /* Add this line to position it at the left */
   right: 0; /* Add this line to stretch it to the right */
